fixed minor css issue with login screen on mobile

--- a/content/assets/css/index.css
+++ b/content/assets/css/index.css
@@ -919,6 +919,7 @@ footer {
     left: 40%;
     font-size: 20px;
     height: 800px;
+    width: 200px;
 }
 
 hr {
